再学mysql 第二遍complete

--- a/英语.md
+++ b/英语.md
@@ -74,7 +74,8 @@ previous 在什么的前面
     vi  --- way的简化版
     ous --  形容词后缀
     pre/pri --  在什么的前面
-    
+primary		主要的
+primary key z
     
 establish	 词根 st --- stand , 所以stable 稳定的 ， able形容词后缀，表示有什么能力的
 
@@ -103,3 +104,8 @@ access			访问
 appear 			显示
 ```
 
+
+
+
+
+定风波
