--- a/python/并发编程.md
+++ b/python/并发编程.md
@@ -2,9 +2,62 @@
 
 https://www.cnblogs.com/Eva-J/p/7277026.html
 
-
-
 https://www.cnblogs.com/Eva-J/articles/8253549.html#_label12
+
+![](D:\笔记\python\线程模型.png)
+
+**重点：**
+
+- **如果我们实用的是multiprocessing 中的Process，在实用锁的时候，必须使用进程锁。同理实用Thread的时候必须实用线程锁，不然报错**
+- **进程读取代码、数据、文件到自己的栈里面的时候，读取的是 `if __name__ == '__main__'上面的代码，文件、数据，而线程则不一样，由于线程是在同一个进程里面的，他们共享代码、数据、文件，所以线程读取的数据，就是整个py文件。`**
+
+```python
+import time
+import random
+# from multiprocessing import Process, Lock
+from threading import Thread, Lock
+# a = 11111111111111111111111111111111111111111
+
+def ktv(i, sema):
+    sema.acquire()
+    print('%d走进ktv' % i)
+    print(a)
+    time.sleep(random.randint(1, 5)) #模拟唱歌事件
+    print('%d走出ktv' % i)
+    sema.release()
+
+if __name__ == '__main__':
+    a = 11111111111111111111111111111111111111111
+    sema = Lock()
+    for i in range(10):
+        Thread(target=ktv, args=(i, sema)).start()
+        
+        
+        
+ ==========根据上面的第二点，线程贡献数据的代码，那么我们sema参数根本就不需要写到，参数里面去====
+import time
+import random
+# from multiprocessing import Process, Lock
+from threading import Thread, Lock
+# a = 11111111111111111111111111111111111111111
+
+def ktv(i):
+    sema.acquire()
+    print('%d走进ktv' % i)
+    print(a)
+    time.sleep(random.randint(1, 5)) #模拟唱歌事件
+    print('%d走出ktv' % i)
+    sema.release()
+
+if __name__ == '__main__':
+    sema = Lock()
+    for i in range(10):
+        Thread(target=ktv, args=(i, )).start()
+```
+
+
+
+
 
 #### Pool 、 ThreadPoolExecutor、ProcessPoolExecutor的区别
 
@@ -21,11 +74,11 @@ https://www.cnblogs.com/Eva-J/articles/8253549.html#_label12
 
 ##### ProcessPoolExecutor的回调
 
-> - ​	ProcessPoolExecutor 回调是单独生成一个进程，该进程就是主进程
-> - ​    回调会阻塞多进程，比如我的进程池中有5个进程，那么这个5个进程+1个回调进程是一组， 当5个进程执行任务完毕后，且回调进程完成一次回调工作后，才重新拉取5个任务过来，这才是一轮（尼玛）
+> - ​	ProcessPoolExecutor 回调是单独生成一个进程，该进程就是主进程,因为回调我们没有采用多进程直接实用的callback
+> - ​    回调会阻塞多进程，比如我的进程池中有5个进程，那么这个5个进程+1个回调进程是一组， 当5个进程执行任务完毕后，且回调进程完成一次回调工作后，才重新拉取5个任务过来，这才是一轮（尼玛），这里有问题，现在的最新发现是，进程池每完成一个任务，就必须完成一个回调，才能继续工作，否则整个进程池阻塞
 > -    最搞笑的是， 最后任务全部执行完毕后，才一点一点在回调进程中执行剩下的回调任务（5：1的执行嘛， 最后剩下一大堆回回调任务慢慢执行）
 > -    这TM 其实跟不使用回调，采用result_list.append(res) 最后在串行执行回调的方式差距不大
-> - ​    风险点：当 一组中的回调阻塞以后，整个组就阻塞了。GG思密达
+> - ​    风险点：当 一组中的回调阻塞以后，整个组就阻塞了。GG思密达，因为单进程
 > - ​    🔺不使用回调的时候，完成一个任务，释放回一个进程到进程池，然后被下一个任务占用
 
 🔺. 建议ProcessPoolExecutor不使用回调，下面这个例子你可以看见,当 一组中的回调阻塞以后，整个组就阻塞了。GG思密达
@@ -121,6 +174,37 @@ if __name__ == '__main__':
 标签: 1 回调结束 耗时: 10
 结束 30.26867914199829
 🔺总共耗时 30秒，证明创建标签的2个任务是并行的，一共花费了10秒钟， 后面的回调，就是串行了。2个回调一共20秒，加起来30秒
+
+再看这一个例子：更好说明。当回调阻塞以后，整个都阻塞了，我擦，不适合做回调
+from concurrent.futures import ProcessPoolExecutor
+import time
+import random
+
+def call(num):
+    if num.result() == 1:
+        time.sleep(1000)
+    time.sleep(1)
+    print(num.result())
+
+def func(num):
+    print('顾客 %d ' % num)
+    time.sleep(random.randint(3, 10))
+    return num
+
+
+
+if __name__ == '__main__':
+    p = ProcessPoolExecutor(max_workers=5)
+    result_list = []
+    start = time.time()
+    for i in range(1, 20):
+        res = p.submit(func, i)
+        res.add_done_callback(call)
+    print(1111111111111111111111111111111111)
+    for i in result_list:
+        print(i.get(), 'xxxxxxxxxxxxxxxxxxxxxx')
+    p.shutdown()
+    print(time.time()-start)
 ```
 
 
@@ -134,10 +218,40 @@ if __name__ == '__main__':
 ##### ThreadPoolExecutor
 
 - ​    ThreadPoolExecutor回调就灵性很多了，一个生产任务加一个回调任务共占用一个线程，完成整个流程就把线程丢回池子里面去
-- ​    🔺 ThreadPoolExecutor适合使用回调
-- ​     🔺不使用回调的时候，完成一个任务，释放回一个进程到进程池，然后被下一个任务占用
+- ​    🔺 ThreadPoolExecutor最后适合使用回调。回调和任务线程是一个，就算阻塞也只阻塞一个。
+- ​     🔺不使用回调的时候，完成一个任务，释放回一个进程到进程池，然后被下一个任务占用。
+
+```python
+from concurrent.futures import ThreadPoolExecutor
+import time
+import random
+
+def call(num):
+    if num.result() == 1:
+        time.sleep(1000)
+    time.sleep(1)
+    print(num.result())
+
+def func(num):
+    print('顾客 %d ' % num)
+    time.sleep(random.randint(3, 10))
+    return num
 
 
+
+if __name__ == '__main__':
+    p = ThreadPoolExecutor(max_workers=5)
+    result_list = []
+    start = time.time()
+    for i in range(1, 20):
+        res = p.submit(func, i)
+        res.add_done_callback(call)
+    print(1111111111111111111111111111111111)
+    for i in result_list:
+        print(i.get(), 'xxxxxxxxxxxxxxxxxxxxxx')
+    p.shutdown()
+    print(time.time()-start)
+```
 
 
 
@@ -145,15 +259,45 @@ if __name__ == '__main__':
 
 ##### Pool进程池
 
-> - ​	跟ProcessPoolExecutor回调一模一样
+> - ​	apply_async, 采用回调的时候，进程中完成一个任务就拉取下一个任务，回调数据相当于丢到了一个队列里面，回调函数慢慢取出来消耗。好像回调函数和主进程是一个（已经证实就是单进程的，在）。倒是任务处理非常块，但是最后的回调和主进程中获取结果就异常慢了。
 > - ​    🔺res = p.apply_async(func, args=(q,), callback=(func2)), 这里回调的给func2的参数不需要get或者result，就是原始数据，直接使用，但是res是一个result对象，这个时候就需要res.get()来获取值了
-> - ​    🔺不使用回调的时候，完成一个任务，释放回一个进程到进程池，然后被下一个任务占用
+> -  挺适合做回调的， 适合做哪些回调数据小，处理较快的场景
+
+ProcessPoolExecutor ，进程池处理多个任务时，当有一个任务执行完成，，其他进程池任务继续未完成的任务，但是进程池要继续执行其他新任务，就必须等待，回调任务完成，如果回调阻塞，整个任务全部阻塞。感觉这就很坑了
+
+```python
+from multiprocessing import JoinableQueue, Process, Pool
+# from concurrent.futures import ProcessPoolExecutor
+import time
+import random
+
+def call(num):
+    if num == 1:
+        time.sleep(10000)
+    time.sleep(5)
+    print(num)
+
+def func(num):
+    print('顾客 %d ' % num)
+    time.sleep(random.randint(3, 10))
+    return num
 
 
 
-
-
-
+if __name__ == '__main__':
+    p = Pool(5)
+    result_list = []
+    start = time.time()
+    for i in range(1, 20):
+        res = p.apply_async(func, args=(i, ), callback=call)
+        result_list.append(res)
+    print(1111111111111111111111111111111111)
+    for i in result_list:
+        print(i.get(), 'xxxxxxxxxxxxxxxxxxxxxx')
+    p.close()
+    p.join()
+    print(time.time()-start)
+```
 
 
 
@@ -712,6 +856,46 @@ e.wait()
 print(111111)
 
 ```
+
+
+
+**红绿灯的例子**
+
+```python
+from multiprocessing import Process, Event
+import time
+import random
+
+
+def taffic_light(e):
+    while True:
+        print('红灯')
+        time.sleep(5)
+        e.set()
+        print('绿灯')
+        e.clear()
+
+
+def car(e, num):
+    if not e.is_set():
+        print('汽车 %d 红灯等待' % num)
+        e.wait()
+    print('汽车 %d 绿灯通过' % num)
+
+
+
+if __name__ == '__main__':
+    e = Event()
+    p = Process(target=taffic_light, args=(e,))
+    p.start()
+    for i in range(10):
+        time.sleep(random.randint(1, 3))
+        c = Process(target=car, args=(e, i))
+        c.start()
+
+```
+
+
 
 
 
