--- a/python/正则表达式.md
+++ b/python/正则表达式.md
@@ -587,7 +587,7 @@ re.compile('(?<=www.)b(\\w+?)(?=.com)')
 
 #### 2.2 **匿名分组在正则中的引用**
 
-🔺在进行匿名引用的时候我们看一个错误？
+🔺在进行匿名引用的时候我们看一个错误？也不算错误，就是啥也匹配不到
 
 ```python
 import re
@@ -715,6 +715,7 @@ import re
 >>> a = 'www.baidu.com,www.Baidu.com,www.Gogle.cn,www.gogle.cn'
 >>> p = r'(?x)(www\.)b(\w+?)(?P<百度>\.com),\1B\2\3'
 >>> b = re.compile(p)
+>>> c = b.search(a)
 
 >>> c.group()
 'www.baidu.com,www.Baidu.com'
