--- a/python/魔法方法.md
+++ b/python/魔法方法.md
@@ -185,6 +185,44 @@ def __getitem__(self, *args, **kwargs): # real signature unknown
 
 
 
+```python
+class NAME(object):
+
+    def __init__(self, name: list, age):
+        self.name = name
+        self.age = age
+
+    def __getitem__(self, item):
+        return self.name[item]
+
+    def __setitem__(self, key, value):
+        self.name[key] = value
+
+    def pop(self):
+        data = self.name.pop()
+        return data
+
+    def append(self, name):
+        self.name.append(name)
+
+    def __str__(self):
+        print(11111111111)
+        return str(self.name)
+    
+a = NAME([1, 2, 3], 28)
+print(a[1])
+a.append(2)
+print(a)
+
+
+2
+11111111111
+[1, 2, 3, 2]
+
+```
+
+
+
 
 
 ## 四、`setattr`、`getattr`、`hasattr`
