--- a/其他/其中资源收集.md
+++ b/其他/其中资源收集.md
@@ -1,10 +1,42 @@
-面试官你好，我叫张明柱，来自重庆万州。做过五年测试，今天来面试贵公司的软件测试工程师。
+面试官你好，我叫张明柱，来自重庆万州。就职过3家公司，今天来面试贵公司的测试工程师职位。
 
-我大学的专业是机械设计及其自动化专业，大学侧重于自动化发展方向，大学期间学习过C语言和计算机基础。通过校招进入中船重工重庆海装风电，担任测试工程师。在海装期间测过硬件、客户端、web，期间学习了python,开始接触自动化测试。于20年6于来到成都晓多科技公司。
-
-晓多科技是一家人工智能客服服务厂商，业务涉及客户端、web、C端小程序。在晓多主要承接一些客户端和web端的测试，参与前期框架的搭建，基于python 和pytest，allure。期间也从事过基于chrome调试协议，cef框架客户端的ui自动化脚本的编写，编写过一些工具脚本，如近期完成的一个去晓多化项目，要去掉所有前端页面，含有晓多的字符。我编写了一个通过re正则模块，采用多进程的方式扫描全部前端文件，找出前端页面中含有晓多字样的数据，交予研发修改。
+上一家公司是成都晓多科技， 晓多科技是一家提供智能客服服务的厂商，业务涉及客户端、web、C端小程序。在晓多的日常工作是参与日常需求迭代会议，需求排期，需求评审，编写用例，跟进线上bug，bug分析。主要承接一些客户端和web端的功能测试，参与接口自动化前期框架的搭建，基于python 和pytest，allure,编写接口自动化脚本及脚本的维护。期间也从事过基于chrome远程调试协议，cef框架客户端的ui自动化脚本的编写，但是由于ui自动化收益太低，维护困难，该项目最后被放弃。期间也产出过一些工具脚本。近期针对去晓多化项目，编写过一个基于re正则模块，采用多进程的方式遍历全部前端文件，查找前端中包含晓多字符的前端代码，交予前端修改。
 
 我性格开朗，喜欢和人打交道，平时喜欢骑车，钓鱼，打球。这是我一个简单的自我介绍。您看我这边还需要做什么补充？
+
+在晓多主要承接一些客户端和web端的测试功能测试
+
+SOP项目
+
+qps大概，2000-3000。并发数当时设置 的是200-1500
+
+
+
+locust用一台就够了   
+
+压测机linux 8核CPU
+
+locust是基于协程的，一次只能使用一个核，单台8C的压测机可以启动8个slave一个master（超超是启动了1个master4个slave）
+
+分析为什么 ：启动多个locust slave和使用单个差距不大
+
+原因：可能是由于单台压测机的网路I/O
+
+locust的监控上显示的数据和真实的数据量是存在差异的，会比实际的低一些。我们可以通过nginx的请求日志，通过tail ，awk，uniq等一些列操作，过滤分析出真实的数据
+
+
+
+关注点就是
+1.当前服务器负载
+2.sop商品推荐的微服务内存占用
+3.rps高了之后请求的响应时间是否满足阿里要求?（阿里要求响应时间不能高于200ms）
+4.tp99，tp90的概念
+
+5. 负载的概念背一下，然后sop涉及到了一个微服务，查看那个微服务的内存的方法记一下
+
+
+
+
 
 
 
@@ -25,6 +57,12 @@
 
 
 
+
+长沙二三三网校   顺天国际财富中心
+
+广州果肉网校  上面有一个人民公园， 中山五路  中旅商业城 
+
+ 
 
 
 
