--- a/python/urllib/爬虫 .md
+++ b/python/urllib/爬虫 .md
@@ -132,7 +132,7 @@ name=%E7%88%AC%E8%99%AB%E5%9F%BA%E7%A1%80&greet=hello+world&age=100
 
 🔺备注：返回的qs是很有意思的
 
-- 汉字被变成了十六进制的hex()，并用%替代了0x
+- 汉字被变成了十六进制的hex()，并用%替代了\x
 - 如果参数有空格，用加号替代空格，有几个空格，就用几个加号
 
 
@@ -241,7 +241,7 @@ ParseResult(scheme='http', netloc='www.xyz.com', path='/aa.html', params='', que
 >>> b[0]
 'http'
 
-# 如果allow_fragments = False的时候,分段将会被归入query里面
+# 如果allow_fragments = False的时候,分段将会被归入query里面， 分段也叫锚点
 >>> parse.urlparse(a, allow_fragments=False)
 ParseResult(scheme='http', netloc='www.xyz.com', path='/aa.html', params='aoteman', query='param=xxx#bb.html', fragment='')
 ```
