--- a/python/正则表达式.md
+++ b/python/正则表达式.md
@@ -82,7 +82,9 @@ re.search(r'\m', 'ABCD')
 
 # 三、匹配unicode中文字
 
-匹配中文字符的正则表达式： [\u4e00-\u9fa5]
+匹配中文字符的正则表达式： [\u4e00-\u9fa5] 
+
+匹配所有ASCII码的正则: `[\000-\177]`   这是一个 八进制数
 
 \u4e00解码过来是‘一’
 
