--- a/Django/其他.md
+++ b/Django/其他.md
@@ -75,3 +75,50 @@ pymysql.install_as_MySQLdb()
 - `pymysql.version_info = (1, 4, 6, 'final', 0)`的目的是，手动改版本，不然可能要报错。
 
 其实把，我试了试，在news目录下的`__init__.py`中添加也有效果
+
+
+
+
+
+# 二、响应码
+
+- 404 :   not found
+- 405：
+- 403：
+- 500：  服务器错误
+- 301：  永久重定向
+- 302：   临时重定向
+- 200
+
+
+
+
+
+# 三、XHR
+
+案例： 有道在线翻译
+
+
+
+
+
+
+
+# 四、登录状态的判断方式
+
+#### 1、第一种-通过cookie判断
+
+网站有很多权限控制，登录用户和未登录用户显示的内容有差别。
+前后端分离后，前端怎样判断用户是否已登录？有哪些方式？
+我目前了解的有：
+1.登录成功后，后端返回一个cookie，根据这个cookie的有无来判断；退出登录时，后端会删除这个cookie；
+2.登录成功后，前端设置cookie，比如'`isLogin = true`'，根据isLogin的值去判断；退出登录时删除cookie`isLogin` 或设置'`isLogin = false`'。
+
+
+
+#### 2、第二种 - token
+
+1. 前台发送登录请求
+2. 后台返回token，前台得到后台返回的token，将其写入到localStorage中，后续请求中都携带token
+3. 后台判断token是否过期，如果过期就对前台的请求响应过期标识或者状态码
+4. 前台得到过期标识后，清除localStorage中的token，然后重定向到login路由
