--- a/Django/管理后台/01_管理后台.md
+++ b/Django/管理后台/01_管理后台.md
@@ -56,3 +56,6 @@
 ![image-20211211125139607](image-20211211125139607.png)
 
 - 坏处，但是有时候我们就是想看他到底是什么类型的时候，才用print的方式，给我们返回了一个字符串，这也很伤
+- admin.site.register的顺序问题
+
+![image-20220108231029884](image-20220108231029884.png)
