--- a/Django/错误收集.md
+++ b/Django/错误收集.md
@@ -284,7 +284,7 @@ print(item.name, item.title, item.id,  type(item))
 
 - 当我们在联表查询的时候，指定一个表的主键即可
 
-- 如果把两张表的id都指定了的话，谁在前面取谁的值，这个时候，我们可以给其中一个主键的id指定别名
+- 如果把两张表的id都指定了的话，谁在前面取谁的值，这个时候，我们就可以给其中一个主键的id指定别名
 
 ```python
 article = Article.objects.raw('select user.name, article.title, article.id, user.id as user_id from user join article on user.id = article.users_id')
@@ -316,3 +316,140 @@ article = Article.objects.raw('select `user`.`name`, `article`.`title`, article.
 执行情况表的命令
 
 ![image-20211212184359910](image-20211212184359910.png)
+
+
+
+
+
+# 七、form表单发送post请求的时候，路由地址未以斜杠结尾报错
+
+**错误信息：**
+
+**错误码：500（服务器错误）**
+
+```
+RuntimeError: You called this URL via POST, but the URL doesn't end in a slash and you have APPEND_SLASH set. Django can't redirect to the slash URL while maintaining POST data. Change your form to point to 127.0.0.1:8000/login/test
+/ (note the trailing slash), or set APPEND_SLASH=False in your Django settings.
+
+RuntimeError：您通过 POST 调用了此 URL，但该 URL 不以斜杠结尾，并且您设置了 APPEND_SLASH。 Django 无法在维护 POST 数据的同时重定向到斜杠 URL。 将您的表单更改为指向 127.0.0.1:8000/login/test/（注意尾部斜杠），或在 Django 设置中设置 APPEND_SLASH=False。
+```
+
+![image-20220102215722292](image-20220102215722292.png)
+
+**怎么修改呢？**
+
+![image-20220102215858217](image-20220102215858217.png)
+
+
+
+
+
+# 八、CSRF -- 403（拒绝访问错误）
+
+**报错信息：**
+
+**错误码：403**
+
+```
+Forbidden (CSRF token missing or incorrect.): /login/test/
+```
+
+![image-20220102220135406](image-20220102220135406.png)
+
+CSRF 跨域工具保护
+
+**浅谈：CSRF**
+
+https://zhuanlan.zhihu.com/p/22521378
+
+**备注：后面学习，原理，现在先学习解决版本**
+
+
+
+#### 第一种临时解决办法
+
+在setting.py > MIDDLEWARE  的中间件配置中，将CSRF中间件配置给注释了（这个玩意啊，这是临时办法）
+
+![image-20220102220408904](image-20220102220408904.png)
+
+
+
+#### 第二种解决办法
+
+在form表单中加入一段代码
+
+```html
+<body>
+<form action="/login/test/" method="post">
+    {% csrf_token %}	🌂加入一个csrf_token
+    输入手机号：
+    <label>
+        <input type="text" name="phone">
+    </label><br>
+    输入密码：
+    <label>
+        <input type="password" name="password">
+    </label><br>
+    <input type="submit" value="登录">
+
+</form>
+</body>
+```
+
+![image-20220102220856384](image-20220102220856384.png)
+
+
+
+**此时我们打开这个页面渲染后的源代码**
+
+![](image-20220102221445882.png)
+
+
+
+**我们发现**
+
+- 源代码里面多了一个隐藏的输入框
+
+- 这个输入框在我们提交表单数据的时候，也会加入到参数当中（这个参数是浏览器自动生成的好像）
+
+	![image-20220103183108221](image-20220103183108221.png)
+
+- 我们在get这个页面的时候，响应头中有一个set_cookie的命令，浏览器接到这个cookie以后就会设定cookie（证明set-cookie字段是后端返回的,因为响应头是后端定义的，我们可以大胆猜测，后端在render渲染页面的时候，发现页面中存在crsf，就会在响应头中返回set-cookie（因为render底层也是调用了HttpResponse），浏览器接收到这个响应头以后 ，执行set-cookie操作）![image-20220103190249627](image-20220103190249627.png)
+
+![image-20220103183354877](image-20220103183354877.png)
+
+
+
+- 我在通过requests模块模拟登录的时候，我首先要get，在respones.headers 响应头中拿到cookie值，然后再模拟登录的post请求中构造请求头，然后还要将crsf这个隐藏表单输入项数据传入
+
+```python
+import requests
+import re
+url = 'http://127.0.0.1:8000/login/login_in/'
+res = requests.get(url=url)
+print(res.headers)
+regex = r'(?<=csrftoken=)\w+(?=;)'
+regex_result = re.search(regex, res.headers['Set-Cookie']).group()
+print(regex_result)
+data = {'csrfmiddlewaretoken': regex_result, 'phone': '18996696040', 'password': '1234567'}
+headers = {'Cookie': 'csrftoken=' + regex_result}
+res = requests.post(url=url, data=data, headers=headers)
+print(res)
+
+```
+
+
+
+
+
+**此时我们打印post传过来的参数我们会发现里面多了一个东西**
+
+- **csrfmiddlewaretoken**
+
+![image-20220102221700111](image-20220102221700111.png)
+
+
+
+#### 第三种解决办法（装饰器）
+
+后面再说
