--- a/python/urllib/爬虫 .md
+++ b/python/urllib/爬虫 .md
@@ -174,6 +174,16 @@ b'\xe5\xbc\xa0\xe6\x98\x8e\xe6\x9f\xb1'
 
 🔺注意：如果一个url已经被编码了，我们执行quote编码，它很有可能是要报错的，因为它会把前面的url也编码了。所以啊，我们一般采用上面的方式只针对汉字去执行quote，不要把整个url来使用quote，不然你的url整体都变了。
 
+```python
+>>> url = '/xiaoduo/show2/张明柱30'
+>>> parse.quote(url)
+	
+'/xiaoduo/show2/%E5%BC%A0%E6%98%8E%E6%9F%B130'
+>>> parse.quote('/xiaoduo/show2/%E5%BC%A0%E6%98%8E%E6%9F%B130')		# 再次编码一次
+	
+'/xiaoduo/show2/%25E5%25BC%25A0%25E6%2598%258E%25E6%259F%25B130'	# 发现不一样了	
+```
+
 
 
 ## 2、parse.unquote 和 parse.parse_qs、parse.parse_qsl
