--- a/python/正则表达式.md
+++ b/python/正则表达式.md
@@ -10,6 +10,26 @@ print(b)
 
 
 
+**🔺完美匹配IP的正则**
+
+这里还有一个bug，就是当我们是以0开头的时候，他还是给他算进去了,其他的都还号
+
+```python
+import re
+p = r"^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$"
+a = '092.055.012.01'
+re.search(p, a)
+>>> <_sre.SRE_Match object; span=(0, 14), match='092.055.012.01'>
+
+# 上面这个玩意是以前面配置开头的 对于我们场景不适用，只要把前面^去掉就行，但是还是那样会把0开头的匹配了
+p = r"^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$"
+a = '的292.055.012.01'
+re.search(p, a)
+<_sre.SRE_Match object; span=(2, 15), match='92.055.012.01'>
+
+这个还有一个致命的弱点，就上面这个例子
+```
+
 
 
 # 一、思路（两套规则）
