--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -1,3 +1,5 @@
+## 一、VLAN
+
 ![image-20220214224936550](image-20220214224936550.png)
 
 
@@ -246,4 +248,52 @@ undo shutdown
 # 提交(CE系列交换机必须提交任务，不然不生效)
 commit
 ```
+
+
+
+
+
+## 二、华为交换机配置管理口
+
+**user-interface vty 0 4参数说明**
+
+```
+user-interface 是指用户界面。
+
+vty ，全称为Virtual Teletype Terminal，指虚拟终端。不带vty的，就是实实在在的端口。
+
+0 4 ：0是初始值，4是结束值。表示可同时打开5个会话，进入交换机去配置命令，并且使用的配置都是一样的
+```
+
+```python
+display telnet server status
+
+display ssh user-information 
+
+display ssh server status 
+```
+
+
+
+
+
+
+
+
+
+## 三、CE交换机的NULL0接口
+
+华为交换机配置里interface NULL0意思是是虚拟接口0，是一种纯软件性质的逻辑接口。它永远处于up状态，但不能转发数据包，也不能配置ip地址和链路层协议。如果在静态路由中指定到达某一网段的下一条为null接口时，则任何送到该网段的网络数据报文都会被丢。
+
+因此华为交换机设备通过null接口提供了一种过滤报文的简单方法：将不需要的网络流量发送到null接口，从而免去配置acl（访问控制列表）的复杂工作。
+
+相当于Linux系统的/dev/null
+
+
+
+
+
+## 四、配置telnet
+
+[SSH](https://so.csdn.net/so/search?q=SSH&spm=1001.2101.3001.7020) Telnet( 简称Stelnet），在华为的网络设备上，它只是“SSH”的另一种叫法（而实际Stelnet和SSH的区别也只是叫法上不同而已）
 
