提交配置交换机密钥登录

--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -297,3 +297,163 @@ display ssh server status
 
 [SSH](https://so.csdn.net/so/search?q=SSH&spm=1001.2101.3001.7020) Telnet( 简称Stelnet），在华为的网络设备上，它只是“SSH”的另一种叫法（而实际Stelnet和SSH的区别也只是叫法上不同而已）
 
+**第一次配置**
+
+```bash
+# 进入系统视图
+system-view
+
+# 配置远程登录视图,采用aaa认证
+[~HUAWEI]user-interface vty 0 4
+[~HUAWEI-ui-vty0-4]authentication-mode aaa
+[*HUAWEI-ui-vty0-4]protocol inbound all		# 配置入站传入协议
+[*HUAWEI-ui-vty0-4]user privilege level 3
+[*HUAWEI-ui-vty0-4]quit
+
+# 配置aaa认证
+[*HUAWEI]aaa
+[*HUAWEI-aaa]local-user client001 password irreversible-cipher Huawei@123
+[*HUAWEI-aaa]local-user client001 level 3
+[*HUAWEI-aaa]local-user client001 user-group manage-ug
+[*HUAWEI-aaa]local-user client001 service-type ssh
+[*HUAWEI-aaa]commit
+[~HUAWEI-aaa]quit
+
+# 配置用户
+[~HUAWEI]ssh user client001
+[*HUAWEI]ssh user client001 authentication-type password
+[*HUAWEI]commit
+
+# 开启stelnet 和 snetconf 协议
+[~HUAWEI]stelnet server enable
+[*HUAWEI]ssh user client001 service-type stelnet snetconf
+[*HUAWEI]snetconf server enable 
+[*HUAWEI]commit
+
+# 配置密钥+密码登录
+## 客户端生成RSA证书（也可以使用,Xshell上面的自动生成）
+ssh-keygen -t rsa
+
+## 将公钥转换成16进制字符串形式
+ssh-keygen -f id_rsa.pub -e -m pem | grep -v '\-\-\-\-' | base64 -d | xxd -p
+
+
+## 配置交换机aaa认证账号
+[*HUAWEI]aaa
+[*HUAWEI-aaa]local-user client010 password irreversible-cipher Huawei@12345
+[*HUAWEI-aaa]local-user client010 level 3
+
+[*HUAWEI-aaa]local-user client01 service-type ssh
+[*HUAWEI-aaa]commit
+[~HUAWEI-aaa]q
+
+
+## 将公钥导入设备，命名为zmz_rsa
+[~HUAWEI]rsa peer-public-key zmz_rsa
+[*HUAWEI-rsa-public-key]public-key-code begin
+此处粘贴16进制公钥
+30818702818100bb4479cb8c2fa0ed888a353338c3de28358b698a7f4d02
+3e317dc62d1d93fd63d9fbcd083ccb0dbc4075ee2004aa1e7a15ee9639a4
+e4c77d815345f5ff7e37b683bb3b9aca43b04f2dcb045e7928331f7814fd
+e82cff737d56ef0032fd6b4109974529589ad71ad25893775fd455d6daa7
+0004c81a4b7db7da6c833609b4b333020123
+[*HUAWEI-rsa-public-key-rsa-key-code] public-key-code end
+[*HUAWEI-rsa-public-key] peer-public-key end
+[*HUAWEI] commit
+
+## 配置SSH用户(采用密码+密钥)
+[~HUAWEI]ssh user client010 authentication-type password-rsa
+[*HUAWEI]ssh user client010 assign rsa-key zmz_rsa
+[*HUAWEI]ssh user client010 service-type stelnet
+[*HUAWEI]commit
+```
+
+
+
+**如果已经配置VTY视图，后面添加用户只需要，配置后面的就可以了**
+
+**配置交换机登录端口**
+
+```bash
+# 我们这里使用vlanif1 逻辑口来作为交换机登录口， 因为vlan1是系统默认配置的
+[~HUAWEI]interface Vlanif 1
+[*HUAWEI-Vlanif1]ip address 192.168.56.33 24
+[*HUAWEI-Vlanif1]commit
+
+# 进入连线口，开启端口
+[~HUAWEI]interface GE1/0/0
+[~HUAWEI-GE1/0/0]undo shutdown 
+[*HUAWEI-GE1/0/0]commit
+```
+
+
+
+
+
+##  五、交换机
+
+如何查看当前有哪些用户登录了
+
+```bash
+display users 			# 如果有人登录， 会显示采用哪个账号进行登录的
+display user-interface	# 如果有人在登录 会显示一个+
+
+
+display ssh user-information client004	# 指定查看某一个配置用户，这个不是登录用户
+
+# 删除一个用户
+## 首先删除aaa认证
+aaa
+undo local-user client003
+commit
+quit
+## 在删除本地用户
+undo ssh user client003
+commit
+```
+
+
+
+
+
+```
+GE1/0/0                    up       up        0.01%  0.01%          0          0
+GE1/0/1                    up       up           0%     0%          0          0
+GE1/0/2                    *down    down         0%     0%          0          0
+GE1/0/3                    *down    down         0%     0%          0          0
+GE1/0/4                    *down    down         0%     0%          0          0
+GE1/0/5                    *down    down         0%     0%          0          0
+GE1/0/6                    *down    down         0%     0%          0          0
+GE1/0/7                    *down    down         0%     0%          0          0
+GE1/0/8                    *down    down         0%     0%          0          0
+GE1/0/9                    *down    down         0%     0%          0          0
+GE1/0/10                   *down    down         0%     0%          0          0
+GE1/0/11                   *down    down         0%     0%          0          0
+GE1/0/12                   *down    down  
+```
+
+
+
+
+
+```bash
+[~HUAWEI]undo vlan batch 2 to 4
+Warning: The configurations of the VLAN will be deleted. Continue? [Y/N]:Y
+Error: The VLAN has an L3 interface. Please delete it first.
+删除vlan的时候 如果存在vlanif三层接口的时候，是删除不掉的
+
+
+
+[~HUAWEI-GE1/0/5]port trunk pvid vlan 2
+Error: The VLAN does not exist.
+
+
+# hybrid交换机的untagged和tagged是互斥的
+
+# 删除vlan的时候 如果存在vlanif三层接口的时候，是删除不掉的
+
+# 删除VLAN，对应的端口的PVID配置会被清除，untagged、tagged、allow-pass这些不会被清除
+
+# 配置PVID的时候，VLAN必须存在，否则不然配置
+```
+
