添加交换机

--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -137,7 +137,7 @@ hybird端口：
 
 在hybird端口进方向，交换机接收到数据包后，先判断是否带VLAN tag，没有则丢弃，如果没有vlan tag但是配置了PVID，则打上PVID的vlan tag；有则按照对应VLAN进行转发；进方向不看untag配置；
 
-在hybird端口出方向，对于配置了tag vlan的数据包，原封不动发送出去，对于端口配置了untag vlan的数据包，则去掉vlan tag再发送出去；如果是PVID的vlan，则去掉vlan tag再发送出去；
+在hybird端口出方向，     vlan的数据包，原封不动发送出去，对于端口配置了untag vlan的数据包，则去掉vlan tag再发送出去；如果是PVID的vlan，则去掉vlan tag再发送出去；
 ```
 
 
@@ -457,3 +457,28 @@ Error: The VLAN does not exist.
 # 配置PVID的时候，VLAN必须存在，否则不然配置
 ```
 
+
+
+
+
+**access口**
+
+![image-20220401234605757](image-20220401234605757.png)
+
+
+
+**Trunk口**
+
+![image-20220401234633226](image-20220401234633226.png)
+
+交换机的trunk默认是vlan1可以通信的，咱们可以不然这个口子通信，加一条命令
+
+```bash
+undo port trunk allow-pass vlan 1
+```
+
+这样就可以了
+
+**hybrid口**
+
+![image-20220401234749353](image-20220401234749353.png)
