华为交换机

--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -482,3 +482,101 @@ undo port trunk allow-pass vlan 1
 **hybrid口**
 
 ![image-20220401234749353](image-20220401234749353.png)
+
+
+
+## 三层交换机
+
+通过TCP/IP协议的第三层进行转发，就是通过IP地址进行转发
+
+二层交换机就是利用TCP/IP协议的第二层来进行转发，通过MAC地址来转发地址
+
+
+
+![image-20220402022244824](image-20220402022244824.png)
+
+
+
+![image-20220402022257663](image-20220402022257663.png)
+
+1.首先你得明白三层交换机的概念。一次路由多次转发。vlan只是纯二层的玩意，不同vlan间不经过三层网络无法实现互相访问。三层交换机实现vlan间的通信，靠的是三层虚接口间的路由来实现。例如你的H3C 7506E上肯定会有interface vlan 10和interface vlan 160这两个三层虚接口，接口地址先不管。从某个接入层交换机的端口上来一个报文，端口上如果PVID是vlan10，则打上vlan 10的tag，发出广播包，广播到任何允许vlan10通过的端口，假如一直都没有，该包到达三层交换机的时候，发往交换机的核心模块，剥离报头信息，在路口表中寻找通往目的IP地址的路由，发现该条路由指向的三层虚接口的interface vlan为160，那么给报文打上vlan160的标签，发往二层端口，由此实现vlan间的通信。
+
+2.采用三层虚接口来实现，而不建议使用hybrid，采用hybrid端口也能实现访问，只是这样容易造成大量的广播风暴，而且H3C的交换机中间配合了hybrid端口则不要再配置trunk端口。你查看交换机的配置，对应的会有interface vlan10和interface vlan160的虚接口地址，你给vlan 70增加一个三层虚接口地址就行了，然后交换机的内部路由表中会出现三个不同vlan所对应的三层虚接口的路由表，由此实现通信。
+
+
+
+![image-20220403091430383](image-20220403091430383.png)
+
+
+
+![image-20220403091524577](image-20220403091524577.png)
+
+![image-20220403091700158](image-20220403091700158.png)
+
+
+
+
+
+## 六、命令学习
+
+#### 1、修改Banner信息
+
+```
+header login	# 用户登录的时候提示的Banner信息
+	header login information #  回车
+	输入我们的Banner信息 ,然后以 # 结束
+header shell	# 登录后显示的Banner信息
+	同上
+```
+
+快捷键：Ctrl+] 退出交换机
+
+#### 2、等级
+
+| 用户等级 | 命令等级      | 名称   |
+| -------- | ------------- | ------ |
+| 0        | 0             | 访问级 |
+| 1        | 0 and 1       | 监控级 |
+| 2        | 0，1 and 2    | 配置级 |
+| 3-15     | 0，1，2 and 3 | 管理级 |
+
+#### 3、用户界面
+
+| 用户界面类型 | 编号 |
+| :----------- | ---- |
+| Console      | 0    |
+| VTY          | 0-4  |
+
+通过`user-interface console 0`来配置Console口的密码，如下
+
+```
+[~HUAWEI]user-interface console 0
+[~HUAWEI]
+```
+
+通过`user-interface VTY 0 4 `来配置telnet/SSH密码，用户等级，如下
+
+```
+[~HUAWEI]user-interface console 0
+[~HUAWEI-ui-console0]set authentication password cipher huawei@123
+[*HUAWEI-ui-console0]commit
+```
+
+华为交换机默认允许5个人同时登录，我们可以修改这个上限，通过如下命令进行修改，最多改成0-21
+
+```
+[~HUAWEI]user-interface maximum-vty 21
+[*HUAWEI]commit
+```
+
+
+
+#### 4、配置用户界面命令
+
+| 命令                     | 功能                                       |
+| ------------------------ | ------------------------------------------ |
+| idle-timeout             | 设置超时时间（多长时间不操作以后自动退出） |
+| screen-length            | 设置指定终端屏幕的临时显示行数             |
+| history-command max-size | 设置历史命令缓冲区大小                     |
+
+https://www.bilibili.com/video/BV1ZY4y1W7ip?p=23&vd_source=908f99a5244c42140790061d37500028
