--- a/可信测试/性能测试/性能测试.md
+++ b/可信测试/性能测试/性能测试.md
@@ -1,4 +1,4 @@
-## 软件性能的定义 --- 业界
+##   软件性能的定义 --- 业界
 
 **定义一**
 
@@ -36,13 +36,13 @@
 
 **性能指标：**为了满足用户的业务要求而分解出来的软件系统或者部件得可度量得明确指标，如响应时间、吞吐量
 
-
+性能指标啊， 一定要是可度量的。不然是没有意义的。性能指标量化是一个很关键的活动
 
 
 
 ## 软件性能测试的定义
 
-**定义：**软件性能测试就是验证系统或者部件在特定的业务负载和系统配置下正确实现某种功能的性能指标是否满足用户对业务的要求
+**定义：**软件性能测试就是验证系统或者部件在特定的业务负载和系统配置下正确实现某种功能的性能指标，验证这个性能指标是否满足用户对业务的要求
 
 **性能测试的关键活动：**
 
@@ -62,13 +62,41 @@
 
 
 
+上面是关键活动，下面是关键活动的具体分析
+
+测试需求分析：（分析应用场景）
+
+1、分析本次性测试项目的应用领域：五大领域（能力规划、能力验证、缺陷发现、基准测试、性能调优）
+
+2、分析被测性能系统中用户的业务行为模式（如用户是如何使用系统的）
+
+被测对象分析：（明确性能指标）
+
+1、基于用户关注的关键性能进行分析，分析整个业务路径上的性能瓶颈
+
+2、分析性能验证对象
+
+3、明确性能验证的指标值
+
+评估模型建立（明确业负载和性能配置）·
+
+1、明确对性能指标有影响的业务负载和配置
+
+2、明确影响性能的动态指标
+
+也就是三要素：  业务负载、系统配置、动态参数
+
+
+
+
+
 ## 性能测试与韧性/可靠/可用测试关系
 
 性能冲击是性能测试的主要手段，也是韧性测试的手段之一，恢复能力也是性能压力测试的考察维度
 
 ![image-20220330233500714](image-20220330233500714.png)
 
-
+韧性测试：
 
 防护测试：是否防护住，拦截在系统之外。
 
@@ -77,6 +105,14 @@
 响应测试：是否保持在最小服务水平之上，时间满足要求。
 
 恢复测试：攻击解除以后，是否能恢复到原有水平，时间满足要求
+
+主要就是服务是否能够降级或者隔离保证最核心的业务
+
+
+
+性能测试：
+
+主要是通过一些机制 如果负载均衡，准入控制、流控制机制，失效恢复机制来保证系统在各种场景下提供最好的系统效率。
 
 
 
@@ -103,3 +139,16 @@
 3. 性能调优：使指有规划，有目标，有方法支撑的对系统性能进行系统性调优的活动，比如上面的第四个问题
 4. 缺陷发现：通过性能测试手段，（负载/压力测试，稳定性测试等）发现系统中存在的缺陷，比如上面的第五个问题
 5. 基准测试：在不设定性能目标的情况下，来评估相对于已有基准会有哪些性能变化，比如上面的第二个问题
+
+
+
+
+
+目标：
+
+深入理解性能测试的概念、分类及目的，理解性能测试与其他DFX测试的关系
+
+属性掌握性能测试需求分析和测试设计方法，掌握性能测试设计建模方法及应用
+
+掌握性能测试关键指标和评估方法，以及数据处理的常用的数学方法，掌握性能测试的常用评估模型
+
