--- a/交换机/华为交换机.md
+++ b/交换机/华为交换机.md
@@ -517,7 +517,74 @@ undo port trunk allow-pass vlan 1
 
 
 
-## 六、命令学习
+## 六、交换机工作原理
+
+交换机工作在OSI模型的第二层，数据链路层，主要用于终端用户接入网络，对数据帧进行交换。
+
+交换机对数据帧交换机的过程：
+
+- 学习
+
+​	交换机在进行数据转发时，交换机对发送端MAC地址和端口进行记录，这个过程就叫学习。
+
+​	如果所示，PC1想要传输数据帧到PC2，交换机从E0/0/1口接收数据帧，查看其源MAC地址并将与其对应的E0/0/1口记录进MAC地址表。
+
+​	![image-20220801005703368](image-20220801005703368.png)
+
+- 泛洪
+
+​	交换机收到需转发的数据帧，但是MAC地址表中无目的MAC地址条目，则会将此数据帧发送给所有的端口（除源端口）
+
+​	泛洪的前提
+
+1. 当交换机收到一个广播帧或未知的单播帧会泛洪
+2. 接口所属同一WANS
+3. 接口是up状态
+4. 出去自身接收端口
+
+​	如图所示：交换机路由表内并无PC2的路由条目，此时交换机会从PC1收到的数据帧发送给端口E2 E3  E4。
+
+![image-20220801010850664](image-20220801010850664.png)
+
+
+
+​	由于PC1 ping PC2， PC2会给PC1回报，所以交换机MAC地址表会获得PC2的MAC地址
+
+![image-20220801011023857](image-20220801011023857.png)
+
+- 转发
+
+	交换机需转发的数据帧目的地址是已知的（MAC地址表中存在了的），则会将数据帧发送给对应的目的端口
+
+- 过滤
+
+	当进行转发的时候，除特定端口外，其他端口不转发。
+
+	如图所示，交换机对端口E3  E4没有进行转发，是因为进行了过滤
+
+	![image-20220801011238144](image-20220801011238144.png)
+
+- 老化
+
+​		当交换机学习到某个源MAC地址时候会给这一条目一个时间戳（类似于有效时间，这个时间可自行设置，华为交换机默认是五分钟（display mac-address aging-time命令查看）），每当收到此MAC地址发送的数据帧，时间戳会被更新，若超过时间仍未收到从此MAC地址的数据帧，交换机则会将此MAC条目移除/
+
+
+
+
+
+一、ICMP协议
+
+因为IP协议不提供可靠的传输服务，也不提供端到端或点到点的确认，如果出错可以通过ICMP报告来看，它是在IP模块中实现。TCP/IP协议设计的ICMP协议就是为了弥补IP协议的不足。它是TCP/IP协议族的一个子协议，用于在IP主机、路由器之间传递控制消息。控制消息指网络通不通、主机可否达、路由是否可用等。这些控制消息传递的并不是用户数据，但是对用户数据的传输起到了重要的作用。
+
+所总结起来，ICMP协议主要作用是负责差错控制、拥塞控制和传输控制。在实际应用中，ping命令和tracert命令就是基于ICMP协议的命令。ICMP报文是包含在IP数据报中的，属于IP的一个用户，所以IP报头就在ICMP报文前面；ICMP报文包括IP头部、ICMP头部和ICMP报文；在IP头部中protocol=1说明是ICMP报文。
+
+二、ARP协议
+
+ARPddress Resolution Protocol)地址解析协议，负责将相应的IP地址解析成MAC地址。在局域网中，网络中实际传输的是“帧”，帧里面包含了目的主机的MAC地址，ARP就是用来获取目的主机的MAC地址的。ARP的功能就是通过目标主机的IP查询其MAC地址。
+
+备注：路由器有阻止广播的作用，如果我们要访问一台远端的主机，那么我们封装的并不是远端的目的MAC地址，而是我们网关的MAC地址。
+
+## 七、命令学习
 
 #### 1、修改Banner信息
 
@@ -583,7 +650,162 @@ https://www.bilibili.com/video/BV1ZY4y1W7ip?p=23&vd_source=908f99a5244c421407900
 
 
 
-## 七、聚合链路
+## 八、STP生成树协议
+
+STP协议是用来防环的
+
+#### 1、二层交换机网络的冗余性与环路
+
+我们在网络设计的时候，为了网络可靠性更高。会设计多条线路冗余，但是这样就会引入环路
+
+1、冗余设计引入
+
+![image-20220801013622780](image-20220801013622780.png)
+
+
+
+2、人因错误引入
+
+![image-20220801013851035](image-20220801013851035.png)
+
+
+
+#### 2、环路的危害
+
+![image-20220801014041802](image-20220801014041802.png)
+
+备注：BUM帧（Broadcast、Unknown unicast、Multicast）指定广播、未知单播、组播
+
+
+
+#### 2、STP生成树协议
+
+在网络中部署生成树后，交换机与交换机之间会进行生成树协议报文的交互并进行无环拓扑计算，最终将网络中某个（或某些）接口进行阻塞，从而打破环路
+
+![image-20220801015231523](image-20220801015231523.png)
+
+
+
+交换机上运行的生产树协议会持续监控网络的拓扑变化，当网络拓扑结构发生变化时，生成树能感知到这些变化，并自动做出调整。因此，生成树既能解决二层环路问题，也能为网络冗余性提供一种方案
+
+![image-20220801015530397](image-20220801015530397.png)
+
+解释：STP为了打破环路，将右侧接口阻塞（左图），当主要链路故障（右图），前面被阻塞的链路自动恢复，保障链路的连通性
+
+https://support.huawei.com/enterprise/zh/doc/EDOC1100213146/d8e5345a
+
+#### 3、STP应用位置
+
+![image-20220801020259897](image-20220801020259897.png)
+
+- 接入层：接入用户设备（PC、服务器、存储）
+- 汇聚层：三层交换机，用来做用户网关的
+
+生成树用来打破二层环路，三层环路有三层的防环技术（不知道）
+
+
+
+#### 4、生成树原理
+
+学习生成树是怎么判断去阻塞哪个接口？
+
+![image-20220801020657697](image-20220801020657697.png)
+
+在这张图中，有6个接口，他阻塞任意一个接口都能打破环路，问题是，这六个接口它阻塞哪一个呢？
+
+生成树流程（这四个步骤）
+
+1. 选出根桥
+
+  根桥概念：STP主要作用之一就是在整个交换机网络中计算出一颗无环的树（STP树），根桥就是一个STP交换网络中的树根，STP开始工作后，会在交换机网络中选举出一个根桥，根桥是生产树进行拓扑计算的重要“参考点”，是STP计算得出的无环拓扑的树根
+
+  1. 每个交换机只要运行了STP（Spanning Tree Protocol），它就会有一个桥ID（优先级+交换机MAC），桥ID最小的交换机为根桥
+
+    备注：网桥（Bridge），或者桥也就是交换机。每个交换机的标识就是交换机的桥ID。如上图 4096.4c1f-aabc-102c,前面的4096是它的优先级（这个优先级必须是4096的倍数，可以是0倍，例如0、4096、8192, 4096 * n），后面是它的MAC地址
+
+  2. 当所有交换机的优先级一样的时候，MAC地址最小的为根桥，还可以通过认为指定优先级的方式指定根桥
+
+  3. https://www.bilibili.com/video/BV1ZY4y1W7ip?p=23&spm_id_from=pageDriver&vd_source=908f99a5244c42140790061d37500028
+
+  4. 通过`dis stp查看`,交换机默认优先级是32768，同时通过这个命令我们也可以查看到我们交换机的MAC地址
+
+  	![image-20220803012538254](image-20220803012538254.png)
+
+2. 选出根端口
+
+  1. 根桥上面是不选根端口的，根端口只能是在每个非根桥上，选出一个根端口
+
+3. 选出指定端口
+
+4. 阻塞其他端口
+
+
+
+**接口开销---COSTS概念**
+
+COST（开销）
+
+![image-20220803014122396](image-20220803014122396.png)
+
+- 每一个激活了STP的接口都维护着一个COST值，接口的Cost主要用于计算根路径开销，也就是到达根的开销
+- 接口的缺省Cost除了与其速率、工作模式有关，还与交换机使用的STP Cost计算方法有关
+- 接口带宽越大，则Cost值越小
+- 用户也可以根据需要通过命令调整接口的Cost
+
+**Cost计算方法**
+
+![image-20220803014210392](image-20220803014210392.png)
+
+接口Cost是已经激活了STP的接口所维护的一个开销值，该值存在默认值，与接口的速率有关联，并且设备使用不通的算法时，相同的接口速率对应不同的Cost值
+
+Half-Duplex  ：半双工
+
+Full-Duplex：全双工
+
+Aggregated Link 2 Port: 链路聚合
+
+
+
+**根路径开销--RPC（Root Path Cost）**
+
+![image-20220803015249879](image-20220803015249879.png)
+
+- 这台交换机到达根桥的总的开销，在STP的拓扑计算过程中，一个非常重要的环节就是”丈量“交换机某个接口到根桥的”成本“，也就是RPC
+- 一台设备从某个接口到达根桥的RPC等于从根桥到该设备沿途所有入方向接口的Cost累加
+- 在本例中，SW3从GE0/0/1接口到达根桥的RPC等于接口1的Cost加上接口2的COst
+
+**接口ID--Port ID**
+
+![image-20220803015817037](image-20220803015817037.png)
+
+- 运行STP的交换机使用接口ID来标识每一个接口，接口ID主要用于特定场景下选举指定接口
+- 接口ID由两部分构成，高4bit 是接口优先级，低12 bit是接口编号，如上图，PID=128.23，  128是优先级，他必须是128的倍数，可以是0倍，后面的23是端口号
+- 激活STP的接口会维护一个缺省的接口优先级，在华为交换机上，该值为128.用户可以根据实际需要，通过命令修改该优先级
+
+
+
+**BPDU--（Bridge Protocol Data Unit，网桥协议数据单元）**
+
+![image-20220803020426838](image-20220803020426838.png)
+
+只要一个交换机开了生成树，那么他就开始发这个生成树工作所用到的数据包，比如说选根桥。开启STP的交换机，互相之间传递生成树的相关信息
+
+- BPDU是STP能够正常工作的根本。BPDU是STP协议报文
+- STP交换机之间会交互BPDU报文，这些BPDU报文携带着一些重要信息，正是基于这些信息，STP才能顺利工作
+- BPDUP分为两种类型
+	- 配置BPDU：是根桥始发的，其他交换机进行转发，根桥交换机周期性发送，两秒一个
+	- TCN BPDU（Topology Change Notification BPDU）：哪台交换机发现拓扑有变化了，如果某个非根交换机发现某条线路之前是连接的，后来中断了，这个交换机发现了拓扑变化，他就发送一个拓扑改变通知BPDU，发往根桥
+- 配置BPDU是STP进行拓扑计算的关键，TCN BPDU 只在网络拓扑发生变更时才会被触发
+
+配置BPDU的报文格式
+
+![image-20220803021432504](image-20220803021432504.png)
+
+
+
+
+
+## 十、聚合链路
 
 https://www.bilibili.com/video/BV1ZY4y1W7ip?p=25&vd_source=908f99a5244c42140790061d37500028
 
